feat : 베팅 기능 추가 및 유저 테이블 수정